# v8-runner-rust

./: .gitignore  .mcp.json  AGENT.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
SKILL/: SKILL.md
SKILL/agents/: openai.yaml
SKILL/references/: config-and-backends.md  file-and-artifact-workflows.md  project-workflows.md  testing.md  troubleshooting.md
docs/: CAPABILITIES.md  CONFIGURATION.md  DEEP_DIVE.md  GIT_WORKFLOW.md
docs/architecture/: invariants.md
docs/decisions/: 0001-granitsy-podderzhki-ibcmd-kak-ogranichennogo-backend.md  0002-izolirovat-runtime-state-po-source-set-pod-workpath.md  0007-vydelit-otdelnyy-pereklyuchatel-dlya-shared-edt.md  0011-eksklyuzivnoe-vladenie-workpath-na-vremya-komandy.md  0012-on-demand-change-detection-i-faylovaya-partial-load-strategiya.md  0013-mcp-execution-admission-timeout-cancellation-routing-i-http-session-capacity.md  0014-edinaya-timeout-cancellation-policy-dlya-cli-i-mcp-komand.md  0015-atomarnaya-publikatsiya-dump-artifacts-cherez-staging-backup.md  0016-edinyy-executionoutcome-i-pipeline-steps-dlya-runner-like-stsenariev.md  0017-v8project-yaml-source-set-kak-glavnyy-konfiguratsionnyy-kontrakt.md  0018-perenesti-kontrakt-informatsionnoy-bazy-v-infobase.md  README.md
docs/schemas/: v8project.local.schema.json  v8project.schema.json
examples/: application.yaml  live-cli-designer.fixture.yaml  v8project.local.yaml  v8project.yaml
scripts/test/: README.md  ci-happy-path.sh  ci-rust.sh  live-cli-designer.fixture.yaml  live-cli-designer.sh  live-cli-fixture.sh  live-cli-ibcmd.sh  live-cli.sh  live-mcp-http.py  uat-cli-ibcmd.sh
spec/: ADR_DERIVED_BACKLOG.md  FUNCTIONAL_CAPABILITIES.md  IMPLEMENTATION_BACKLOG.md  IMPLEMENTATION_TODO.md  MCP_IMPLEMENTATION_PLAN.md  REAL_ENV_TEST_PLAN.md  designer-spec.md  ibcmd-commands-full.md
spec/acceptance/: real-environment-validation.md
spec/architecture/: invariants.md
spec/archive/: IMPLEMENTATION_TODO_2026-04-21.md  completed-tasks-t21.md  completed-tasks-t23.md  completed-tasks-t26.md
spec/decisions/: 0002-izolirovat-runtime-state-po-source-set-pod-workpath.md  0020-dobavit-cli-only-convert-dlya-dvustoronney-konvertatsii-edt-i-designer.md  0021-lokalnyy-overlay-config.md  0022-universalnyy-mehanizm-podgotovki-rasshireniy-i-client-mcp-extension.md  README.md
spec/designer-batch/: README.md
src/: app.rs
src/change_detection/: file_state.rs  hash_storage.rs  partial_load.rs  scanner.rs  source_sets.rs
src/cli/: args.rs  execute.rs
src/config/: loader.rs  model.rs  schema.rs  validate.rs
src/domain/: artifact.rs  build.rs  config_init.rs  execution.rs  launch.rs  mod.rs  runner.rs  test.rs  tools_download.rs
src/mcp/: context.rs  edt_session.rs  edt_syntax.rs  error.rs  mod.rs  port.rs  request.rs  server.rs  service.rs  telemetry.rs
src/output/: json.rs  presenter.rs  text.rs
src/parsers/: designer_validation.rs  edt_validation.rs  junit.rs  mod.rs  vanessa_log.rs  yaxunit_log.rs
src/platform/: connection.rs  designer.rs  download.rs  edt.rs  edt_session.rs  enterprise.rs  git.rs  ibcmd.rs  interactive.rs  locator.rs  mod.rs  process.rs  result.rs  utilities.rs
src/support/: adapter_input.rs  edt_project.rs  fs.rs  logging.rs  mod.rs  path.rs  temp.rs
tests/: cli_artifacts.rs  cli_bootstrap.rs  cli_build.rs  cli_config_init.rs  cli_convert.rs  cli_dump.rs  cli_extensions.rs  cli_help.rs  cli_init.rs  cli_launch.rs  cli_load.rs  cli_syntax.rs  cli_test.rs  cli_tools_download.rs  guardrail_support.rs  mcp_http.rs  mcp_stdio.rs  use_case_boundaries.rs
v8-runner/: SKILL.md
(+240 files in other folders)
