[package]
name = "v8-test-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "v8-test-runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
sha2 = "0.10"
redb = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
tempfile = "3"
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = "1"
