[package]
name = "v8-runner"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "v8-runner"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4", default-features = false, features = ["derive", "env", "help", "std", "usage"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "std"] }
walkdir = "2"
sha2 = "0.10"
redb = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
tempfile = "3"
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
rmcp = { version = "1.2.0", default-features = false, features = ["client", "macros", "server", "transport-child-process", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "2"
jsonschema = "0.33"
predicates = "3"
insta = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[profile.release]
opt-level = "z"
panic = "abort"
strip = "symbols"
